fix look of images in about us section on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,6 +492,7 @@ footer {
 
 .guide-text img {
     border-radius: 20px;
+    height: 100%;
 }
 
 iframe {
